[package]
name = "pyext-myrustlib"
version = "0.1.0"
authors = ["Purvesh Patel <purvesh.linux11@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "doubles"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.3"
features = ["extension-module"]
